<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:touchscreenBlocksFocus="false"
    android:background="#ff000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MY_NONODEGREE_APPS"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff3414" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_SPOTIFY_STREAMER"
        android:id="@+id/button"
        android:layout_marginTop="31dp"
        android:layout_gravity="center"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:background="#ffafff00"
        android:textColor="#ff0032ff"
        android:onClick="OnSpodifyStreamerClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_SCORES_APP"
        android:id="@+id/button2"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:background="#ffafff00"
        android:textColor="#ff0032ff"
        android:onClick="OnScoresAppClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_LIBRARY_APP"
        android:id="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:background="#ffafff00"
        android:textColor="#ff0032ff"
        android:onClick="OnLibraryAppClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_BUILD_IT_BIGGER"
        android:id="@+id/button4"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/button3"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:background="#ffafff00"
        android:textColor="#ff0032ff"
        android:onClick="OnBuildItBiggerClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_BACON_READER"
        android:id="@+id/button5"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:background="#ffafff00"
        android:textColor="#ff0032ff"
        android:onClick="OnBaconReaderClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_MY_OWN_APP"
        android:id="@+id/button6"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="#ff0032ff"
        android:textColor="#ffafff00"
        android:onClick="OnCapStoneClick" />
</RelativeLayout>
